--- a/SupervisorApp/src/com/lge/spartan/supervisor/view/SupervisorMainView.form
+++ b/SupervisorApp/src/com/lge/spartan/supervisor/view/SupervisorMainView.form
@@ -505,20 +505,14 @@
                 <Component class="javax.swing.JTable" name="jTable2">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="4" rowCount="0">
+                      <Table columnCount="3" rowCount="0">
                         <Column editable="false" title="S No" type="java.lang.Integer"/>
                         <Column editable="false" title="Order No" type="java.lang.Integer"/>
-                        <Column editable="false" title="Widget Name" type="java.lang.String"/>
-                        <Column editable="false" title="Order Quantity" type="java.lang.Integer"/>
+                        <Column editable="false" title="Widget Name &amp; Quantity" type="java.lang.String"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                           <Title/>
                           <Editor/>
